wiki/content/specifications/vec/v113/classes/documentversion.md
---
title: DocumentVersion
toc: false
type: specs
date: "2017-02-21"
draft: false
specification: VEC
version: 1.1.3
documentType: "Recommendation"
elementType: Class
classes:
  - DocumentVersion
menu_name: vec-1.1.3
---
<p>The DocumentVersion is one of the two anchors for PDM information in the VEC. All technical information about a PartVersion is contained in one or more documents. The documents are containing the actual content of the VEC since all Specifications are an element of a document. </p>

## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | core |
| **Applied Stereotype**  |   |
| **Base Classifier**     | [ItemVersion]({{< relref "itemversion.md" >}})<br/>  |
| **Is Abstract**         | false |
| **Derived Classifiers** |   |

## Attributes
|  Name  |  Type  |  Mult.  |  Description  |  Owning Classifier  |
|--------|--------|---------|---------------|--------------|
|abbreviation | [LocalizedString]({{< relref "localizedstring.md" >}}) | 0..* | <p> Room for a short name of the Item. In case of a document the attribute is wanted to contain its title.      </p> | [ItemVersion]({{< relref "itemversion.md" >}}) |
|description | [AbstractLocalizedString]({{< relref "abstractlocalizedstring.md" >}}) | 0..* | <p>Room for additional, human readable information about the ItemVersion.  e.g. Buchsengehäuse 26-polig </p> | [ItemVersion]({{< relref "itemversion.md" >}}) |
|companyName | [String]({{< relref "string.md" >}}) | 1 | <p> Defines the publishing company of the ItemVersion. The companyName is part of the main identifier of an ItemVersion together with the corresponding number (partNumber or documentNumber) and version (partVersion or documentVersion).      </p> | [ItemVersion]({{< relref "itemversion.md" >}}) |
|processingInstruction | [Instruction]({{< relref "instruction.md" >}}) | 0..* | <p>Processing instructions for the application of the part or the document.  </p> | [ItemVersion]({{< relref "itemversion.md" >}}) |
|documentNumber | [String]({{< relref "string.md" >}}) | 1 | <p> The documentNumber is the major identifier of a DocumentVersion. The format is user defined and respectively company specific. Over all VEC-documents a DocumentVersion-instance can be trusted to be identical if the combination of documentNumber, documentVersion and companyName is identical.      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|documentType | [DocumentType]({{< relref "documenttype.md" >}}) | 0..1 | <p> The type of the document, that is defined in an <i>OpenEnumeration </i>and gives a hint about the content of the document. Values for typical types of documents in the process are predefined (e.g. a part master document for the specification of a <i>PartVersion</i>).     </p>      <p> At later point, further constraint migth be attached to <i>documentType</i> defining a minimum content for certain types of documents.        </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|documentVersion | [String]({{< relref "string.md" >}}) | 1 | <p>The documentVersion specifies the version index of a document (see also documentNumber).  </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|creatingSystem | [String]({{< relref "string.md" >}}) | 0..1 | <p>The creatingSystem specifies the computer application or the machine which is used to create the document. </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|dataFormat | [String]({{< relref "string.md" >}}) | 0..1 | <p> The dataFormat specifies the convention that was used to structure the information in the document. This is useful if the DocumentVersion is actually a pointer to an external document, which is not contained in the VEC or if the content of this DocumentVersion was automatically generated by the extraction of the information out of the original document.      </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|fileName | [String]({{< relref "string.md" >}}) | 0..1 | <p>If this DocumentVersion is a link to an external document (e.g. a ComponentSymbol), then the fileName attribute points to the file containing the original document. To use this attribute is only valid, if the original document is distributed along with the VEC-file e.g. in a ZIP-archive.  It must not point to any file location which is not part of the bundle provided together with the VEC-file (e.g. a File on a central server file share). </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|location | [String]({{< relref "string.md" >}}) | 0..1 | <p>The location specifies where a document can be found in a digital or physical data storage system.  </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |
|numberOfSheets | [String]({{< relref "string.md" >}}) | 0..1 | <p>The number of sheets contained in the document.  </p> | [DocumentVersion]({{< relref "documentversion.md" >}}) |

## Outgoing Relations
|    Type  |   Role   |   Mult.   |   Mult.   |   Description   |
|----------|----------|-----------|-----------|-----------------|
| [PartVersion]({{< relref "partversion.md" >}}) | referencedPart | 0..* | 0..* | The association is an informative link which PartVersions are described by the DocumentVersion. |
| [DocumentVersion]({{< relref "documentversion.md" >}}) | relatedDocument | 0..* | 0..* | The association is an informative link which DocumentVersion are related to each other (e.g. by derivation, A Harness-Drawing is related to a 3D-Model). |
| [ItemEquivalence]({{< relref "itemequivalence.md" >}}) | itemEquivalence | 0..* | 1 | Specifies ItemEquivalances defined by the DocumentVersion. |
| [Specification]({{< relref "specification.md" >}}) | specification | 0..* | 0..1 | Specifies the Specifications contained in the DocumentVersion. All structured, technical information in the VEC is described by such Specifications. |
| [SheetOrChapter]({{< relref "sheetorchapter.md" >}}) | sheetOrChapter | 0..* | 1 | Specifies SheetOrChapters defined in this DocumentVersion. These are especially useful if the DocumentVersion represents an external reference. |
##  Incoming Relations
|    Type  |   Mult.  |   Role    |   Mult.   |   Description  |
|----------|----------|-----------|-----------|----------------|
| [VecContent]({{< relref "veccontent.md" >}}) | 1 | documentVersion | 0..* | Specifies the DocumentVersions contained in the VEC-file. |
| [ExternalMappingSpecification]({{< relref "externalmappingspecification.md" >}}) | 0..* | mappedDocument | 1 | <p> Reference to the <i>DocumentVersion</i> that represents the external data source that connected to the VEC content by the <i>ExternalMappingSpecification</i>.      </p> |
| [DocumentBasedInstruction]({{< relref "documentbasedinstruction.md" >}}) | 0..* | referencedDocument | 1 | References the DocumentVersion that is used as an Instruction. |
| [DocumentVersion]({{< relref "documentversion.md" >}}) | 0..* | relatedDocument | 0..* | The association is an informative link which DocumentVersion are related to each other (e.g. by derivation, A Harness-Drawing is related to a 3D-Model). |
